subprojects/groovy-parser-antlr4/src/test/resources/fail/MethodDeclaration_01.groovy
{ ->
    def say(String msg) {
        println(msg)
    }
}()
